kubernetes/service.yml
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: v1
spec:
  selector:
    app: product
  ports:
    - port: 80
      targetPort: 8080
